[gd_scene load_steps=8 format=2]

[ext_resource path="res://ScriptableObjects/CardSample.gd" type="Script" id=1]
[ext_resource path="res://Sprites/card_complete.png" type="Texture" id=2]
[ext_resource path="res://Sprites/square.png" type="Texture" id=3]
[ext_resource path="res://Fonts/highsquare.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/DAYROM__.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[node name="CardSample" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1000.0
margin_bottom = -34.0
rect_min_size = Vector2( 620, 866 )
script = ExtResource( 1 )

[node name="card_complete" type="TextureRect" parent="."]
margin_right = 601.0
margin_bottom = 866.0
texture = ExtResource( 2 )

[node name="profile_image" type="TextureRect" parent="."]
margin_left = 220.0
margin_top = 130.0
margin_right = 377.0
margin_bottom = 287.0
texture = ExtResource( 3 )

[node name="card_name" type="Label" parent="."]
margin_top = 370.0
margin_right = 590.0
margin_bottom = 470.0
custom_fonts/font = ExtResource( 4 )
text = "nome"
align = 1
valign = 1

[node name="card_description" type="RichTextLabel" parent="."]
margin_left = 41.0
margin_top = 480.0
margin_right = 560.0
margin_bottom = 820.0
rect_min_size = Vector2( 519, 340 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 462.874
margin_top = 387.205
margin_right = 584.874
margin_bottom = 461.205
custom_fonts/font = SubResource( 2 )
text = "auto"
flat = true
align = 1
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
